[CW31]
* SyncProxyAndroid SDK: log when protocol version is set, and each marshalled request.
* SyncProxyTester always uses protocol version 2.
* SyncProxyAndroid SDK: VehicleData parameters are sent as booleans (based on Ford's changes).
* SyncProxyAndroid SDK: cherry-pick Ford's changes: update GetVehicleDataResponse class.
* SyncProxyAndroid SDK: fix a bug when negative function ID corrupted the binary RPC header.
* Fix a crash with EncodedSyncPData message (replaced the Base64 codec).

[CW30]
* GetDTCs dialog and message: add dtcMask and remove encrypted parameter.
+ PerformAudioPassThru dialog and message: add muteAudio parameter.
* ImageType value is DYNAMIC by default.
* SetGlobalProperties, AddCommand, CreateInteractionChoiceSet, PerformInteraction dialogs: allow to set multiple VR commands/synonyms parameters as comma-separated strings.
* Update VehicleData and Language values.
* ButtonSubscriptions dialog: add ButtonName.CUSTOM_NAME value.
+ AddSubMenu dialog: add subMenuID and position parameters.
+ AddCommand dialog: add commandID and position parameters.
+ Show dialog: add graphic's image type parameter.
* AddCommand dialog: the user can omit sending parentID parameter.
+ Add the EncodedSyncPData dialog.

[CW28]
* Cherry-pick Ford's changes: generate test error report with actual and expected responses.

[CW25]
+ ModuleTest can run tests from directory.
* Rename MakeMeFeelGood request => GenericRequest.

[CW24]
+ ModuleTest: add the ability to set custom JSON messages for requests in XML test.
+ ModuleTest: add invalidJSON attribute to request tags to produce invalid JSON sent to the core.
* Fix: ModuleTest: allow to test the responses to Register/UnregisterAppInterface requests.

[CW20]
+ The user can now send brand new MakeMeFeelGood request. Used to test that the response is GenericResponse.
+ ShowConstantTBT dialog (v2): add turn icon parameter.
- SetMediaClockTimer dialog (v1): remove CLEAR update mode.