@@ -1,4 +1,5 @@
 [CW31]
+* SyncProxyAndroid SDK: add incoming JSON message check.
 * SyncProxyAndroid SDK: log when protocol version is set, and each marshalled request.
 * SyncProxyTester always uses protocol version 2.
 * SyncProxyAndroid SDK: VehicleData parameters are sent as booleans (based on Ford's changes).
